--- a/applications/stream-applications-core/stream-applications-test-support/pom.xml
+++ b/applications/stream-applications-core/stream-applications-test-support/pom.xml
@@ -21,6 +21,10 @@
 			<artifactId>spring-integration-test-support</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework.integration</groupId>
+			<artifactId>spring-integration-amqp</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-redis</artifactId>
 			<optional>true</optional>
