--- a/stream-applications-build/pom.xml
+++ b/stream-applications-build/pom.xml
@@ -44,8 +44,8 @@
 		<spring-kafka.version>2.6.2</spring-kafka.version>
 		<spring-rabbit.version>2.2.11.RELEASE</spring-rabbit.version>
 		<spring-cloud-function.version>3.0.9.RELEASE</spring-cloud-function.version>
-		<spring-integration-dependencies.version>5.3.3.BUILD-SNAPSHOT</spring-integration-dependencies.version>
-		<test-containers.version>1.15.0-rc2</test-containers.version>
+		<spring-integration-dependencies.version>5.3.3.RELEASE</spring-integration-dependencies.version>
+		<test-containers.version>1.15.0</test-containers.version>
 		<maven-flatten-plugin.version>1.2.5</maven-flatten-plugin.version>
 		<maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
 	</properties>
