--- a/spring-cloud-dataflow-apps-metadata-plugin/pom.xml
+++ b/spring-cloud-dataflow-apps-metadata-plugin/pom.xml
@@ -3,13 +3,12 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<artifactId>spring-cloud-dataflow-apps-metadata-plugin</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
 	<packaging>maven-plugin</packaging>
 
 	<parent>
 		<groupId>org.springframework.cloud</groupId>
 		<artifactId>spring-cloud-dataflow-apps-plugin-parent</artifactId>
-		<version>1.0.0-SNAPSHOT</version>
+		<version>1.0.0-M2</version>
 		<relativePath>..</relativePath>
 	</parent>
 
