--- a/stream-applications-build/pom.xml
+++ b/stream-applications-build/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>org.springframework.cloud.stream.app</groupId>
 	<artifactId>stream-applications-build</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>1.0.0-M4</version>
 	<name>stream-applications-build</name>
 	<description>Common Parent for Functions and Applications</description>
 	<packaging>pom</packaging>
@@ -40,11 +40,11 @@
 		<nohttp-checkstyle.version>0.0.2.RELEASE</nohttp-checkstyle.version>
 		<disable.nohttp.checks>true</disable.nohttp.checks>
 		<spring-javaformat-checkstyle.version>0.0.7</spring-javaformat-checkstyle.version>
-		<spring-boot.version>2.3.4.RELEASE</spring-boot.version>
-		<spring-kafka.version>2.6.2</spring-kafka.version>
-		<spring-rabbit.version>2.2.11.RELEASE</spring-rabbit.version>
-		<spring-cloud-function.version>3.0.9.RELEASE</spring-cloud-function.version>
-		<spring-integration-dependencies.version>5.3.3.RELEASE</spring-integration-dependencies.version>
+		<spring-boot.version>2.3.6.RELEASE</spring-boot.version>
+		<spring-kafka.version>2.5.8</spring-kafka.version>
+		<spring-rabbit.version>2.2.12.RELEASE</spring-rabbit.version>
+		<spring-cloud-function.version>3.0.11.RELEASE</spring-cloud-function.version>
+		<spring-integration-dependencies.version>5.3.4.RELEASE</spring-integration-dependencies.version>
 		<test-containers.version>1.15.0</test-containers.version>
 		<maven-flatten-plugin.version>1.2.5</maven-flatten-plugin.version>
 		<maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
