--- a/applications/source/cdc-debezium-source/pom.xml
+++ b/applications/source/cdc-debezium-source/pom.xml
@@ -2,11 +2,12 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
 		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+	<version>3.0.0-M4</version>
 
 	<parent>
 		<groupId>org.springframework.cloud.stream.app</groupId>
 		<artifactId>stream-applications-core</artifactId>
-		<version>3.0.0-SNAPSHOT</version>
+		<version>3.0.0-M4</version>
 		<relativePath/>
 	</parent>
 
@@ -96,7 +97,7 @@
 		<dependency>
 			<groupId>org.springframework.cloud.fn</groupId>
 			<artifactId>cdc-debezium-boot-starter</artifactId>
-			<version>1.0.0-SNAPSHOT</version>
+			<version>1.0.0-M4</version>
 			<scope>test</scope>
 		</dependency>
 
