--- a/stream-applications-release-train/stream-applications-descriptor/src/main/resources/META-INF/kafka-apps-docker.properties
+++ b/stream-applications-release-train/stream-applications-descriptor/src/main/resources/META-INF/kafka-apps-docker.properties
@@ -21,6 +21,7 @@ source.twitter-stream=docker:springcloudstream/twitter-stream-source-kafka:@twit
 source.websocket=docker:springcloudstream/websocket-source-kafka:@websocket-source-docker.tag@
 sink.cassandra=docker:springcloudstream/cassandra-sink-kafka:@cassandra-sink-docker.tag@
 sink.analytics=docker:springcloudstream/analytics-sink-kafka:@analytics-sink-docker.tag@
+sink.elasticsearch=docker:springcloudstream/elasticsearch-sink-kafka:@elasticsearch-sink-docker.tag@
 sink.wavefront=docker:springcloudstream/wavefront-sink-kafka:@wavefront-sink-docker.tag@
 sink.file=docker:springcloudstream/file-sink-kafka:@file-sink-docker.tag@
 sink.ftp=docker:springcloudstream/ftp-sink-kafka:@ftp-sink-docker.tag@
