--- a/stream-applications-release-train/stream-applications-descriptor/src/main/resources/META-INF/rabbit-apps-maven-repo-url.properties
+++ b/stream-applications-release-train/stream-applications-descriptor/src/main/resources/META-INF/rabbit-apps-maven-repo-url.properties
@@ -44,6 +44,8 @@ sink.cassandra=https://@repo-spring-io@/org/springframework/cloud/stream/app/cas
 sink.cassandra.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/cassandra-sink-rabbit/@cassandra-sink.version@/cassandra-sink-rabbit-@cassandra-sink.version@-metadata.jar
 sink.analytics=https://@repo-spring-io@/org/springframework/cloud/stream/app/analytics-sink-rabbit/@analytics-sink.version@/analytics-sink-rabbit-@analytics-sink.version@.jar
 sink.analytics.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/analytics-sink-rabbit/@analytics-sink.version@/analytics-sink-rabbit-@analytics-sink.version@-metadata.jar
+sink.elasticsearch=https://@repo-spring-io@/org/springframework/cloud/stream/app/elasticsearch-sink-rabbit/@elasticsearch-sink.version@/elasticsearch-sink-rabbit-@elasticsearch-sink.version@.jar
+sink.elasticsearch.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/elasticsearch-sink-rabbit/@elasticsearch-sink.version@/elasticsearch-sink-rabbit-@elasticsearch-sink.version@-metadata.jar
 sink.wavefront=https://@repo-spring-io@/org/springframework/cloud/stream/app/wavefront-sink-rabbit/@wavefront-sink.version@/wavefront-sink-rabbit-@wavefront-sink.version@.jar
 sink.wavefront.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/wavefront-sink-rabbit/@wavefront-sink.version@/wavefront-sink-rabbit-@wavefront-sink.version@-metadata.jar
 sink.file=https://@repo-spring-io@/org/springframework/cloud/stream/app/file-sink-rabbit/@file-sink.version@/file-sink-rabbit-@file-sink.version@.jar
