--- a/stream-applications-release-train/stream-applications-descriptor/src/main/resources/META-INF/rabbit-apps-maven.properties
+++ b/stream-applications-release-train/stream-applications-descriptor/src/main/resources/META-INF/rabbit-apps-maven.properties
@@ -44,6 +44,8 @@ sink.cassandra=maven://org.springframework.cloud.stream.app:cassandra-sink-rabbi
 sink.cassandra.metadata=maven://org.springframework.cloud.stream.app:cassandra-sink-rabbit:jar:metadata:@cassandra-sink.version@
 sink.analytics=maven://org.springframework.cloud.stream.app:analytics-sink-rabbit:@analytics-sink.version@
 sink.analytics.metadata=maven://org.springframework.cloud.stream.app:analytics-sink-rabbit:jar:metadata:@analytics-sink.version@
+sink.elasticsearch=maven://org.springframework.cloud.stream.app:elasticsearch-sink-rabbit:@elasticsearch-sink.version@
+sink.elasticsearch.metadata=maven://org.springframework.cloud.stream.app:elasticsearch-sink-rabbit:jar:metadata:@elasticsearch-sink.version@
 sink.wavefront=maven://org.springframework.cloud.stream.app:wavefront-sink-rabbit:@wavefront-sink.version@
 sink.wavefront.metadata=maven://org.springframework.cloud.stream.app:wavefront-sink-rabbit:jar:metadata:@wavefront-sink.version@
 sink.file=maven://org.springframework.cloud.stream.app:file-sink-rabbit:@file-sink.version@
