--- a/stream-applications-release-train/pom.xml
+++ b/stream-applications-release-train/pom.xml
@@ -9,8 +9,8 @@
     <parent>
         <groupId>org.springframework.cloud.stream.app</groupId>
         <artifactId>stream-applications-core</artifactId>
-        <version>3.0.0-SNAPSHOT</version>
-        <relativePath>../../applications/stream-applications-core/pom.xml</relativePath>
+        <version>3.0.0-M4</version>
+        <relativePath>../applications/stream-applications-core/pom.xml</relativePath>
     </parent>
 
     <modules>
@@ -19,8 +19,8 @@
     </modules>
 
     <properties>
-        <revision>2020.0.0-SNAPSHOT</revision>
-        <apps.version>3.0.0-SNAPSHOT</apps.version>
+        <revision>2020.0.0-M4</revision>
+        <apps.version>3.0.0-M4</apps.version>
         <cdc-debezium-source.version>${apps.version}</cdc-debezium-source.version>
         <file-source.version>${apps.version}</file-source.version>
         <ftp-source.version>${apps.version}</ftp-source.version>
@@ -44,6 +44,7 @@
         <websocket-source.version>${apps.version}</websocket-source.version>
         <cassandra-sink.version>${apps.version}</cassandra-sink.version>
         <analytics-sink.version>${apps.version}</analytics-sink.version>
+        <elasticsearch-sink.version>${apps.version}</elasticsearch-sink.version>
         <file-sink.version>${apps.version}</file-sink.version>
         <ftp-sink.version>${apps.version}</ftp-sink.version>
         <geode-sink.version>${apps.version}</geode-sink.version>
