--- a/stream-applications-release-train/stream-applications-descriptor/src/main/resources/META-INF/rabbit-apps-docker.properties
+++ b/stream-applications-release-train/stream-applications-descriptor/src/main/resources/META-INF/rabbit-apps-docker.properties
@@ -21,6 +21,7 @@ source.twitter-stream=docker:springcloudstream/twitter-stream-source-rabbit:@twi
 source.websocket=docker:springcloudstream/websocket-source-rabbit:@websocket-source-docker.tag@
 sink.cassandra=docker:springcloudstream/cassandra-sink-rabbit:@cassandra-sink-docker.tag@
 sink.analytics=docker:springcloudstream/analytics-sink-rabbit:@analytics-sink-docker.tag@
+sink.elasticsearch=docker:springcloudstream/elasticsearch-sink-rabbit:@elasticsearch-sink-docker.tag@
 sink.wavefront=docker:springcloudstream/wavefront-sink-rabbit:@wavefront-sink-docker.tag@
 sink.file=docker:springcloudstream/file-sink-rabbit:@file-sink-docker.tag@
 sink.ftp=docker:springcloudstream/ftp-sink-rabbit:@ftp-sink-docker.tag@
