--- a/applications/processor/image-recognition-processor/pom.xml
+++ b/applications/processor/image-recognition-processor/pom.xml
@@ -3,7 +3,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <artifactId>image-recognition-processor</artifactId>
-    <version>3.0.0-M4</version>
+    <version>3.0.0-SNAPSHOT</version>
     <name>image-recognition-processor</name>
     <description>Image recognition (tensorflow) processor apps</description>
     <packaging>jar</packaging>
@@ -11,7 +11,7 @@
     <parent>
         <groupId>org.springframework.cloud.stream.app</groupId>
         <artifactId>stream-applications-core</artifactId>
-        <version>3.0.0-M4</version>
+        <version>3.0.0-SNAPSHOT</version>
         <relativePath/>
     </parent>
 
