--- a/applications/stream-applications-core/pom.xml
+++ b/applications/stream-applications-core/pom.xml
@@ -21,8 +21,8 @@
 		<mockserver.version>5.10</mockserver.version>
         <stream-apps-core.version>${revision}</stream-apps-core.version>
         <java-functions.version>1.0.0-SNAPSHOT</java-functions.version>
-        <spring-cloud-stream-dependencies.version>Horsham.BUILD-SNAPSHOT</spring-cloud-stream-dependencies.version>
-        <spring-cloud-stream.version>3.0.10.BUILD-SNAPSHOT</spring-cloud-stream.version>
+        <spring-cloud-stream-dependencies.version>Horsham.SR10</spring-cloud-stream-dependencies.version>
+        <spring-cloud-stream.version>3.0.10.RELEASE</spring-cloud-stream.version>
         <spring-cloud-dataflow-apps-generator-plugin.version>1.0.0-M2</spring-cloud-dataflow-apps-generator-plugin.version>
         <spring-cloud-dataflow-apps-docs-plugin.version>1.0.0-M2</spring-cloud-dataflow-apps-docs-plugin.version>
         <java-cfenv-boot.version>2.1.2.RELEASE</java-cfenv-boot.version>
