--- a/pom.xml
+++ b/pom.xml
@@ -189,12 +189,12 @@
 		<repository>
 			<id>repo.spring.io</id>
 			<name>Spring Release Repository</name>
-			<url>https://repo.spring.io/libs-release-local</url>
+			<url>https://repo.spring.io/release</url>
 		</repository>
 		<snapshotRepository>
 			<id>repo.spring.io</id>
 			<name>Spring Snapshot Repository</name>
-			<url>https://repo.spring.io/libs-snapshot-local</url>
+			<url>https://repo.spring.io/snapshot</url>
 		</snapshotRepository>
 	</distributionManagement>
 	<repositories>
@@ -236,7 +236,7 @@
 				<repository>
 					<id>repo.spring.io</id>
 					<name>Spring Milestone Repository</name>
-					<url>https://repo.spring.io/libs-milestone-local</url>
+					<url>https://repo.spring.io/milestone</url>
 				</repository>
 			</distributionManagement>
 		</profile>
