--- a/spring-cloud-dataflow-apps-docs-plugin/pom.xml
+++ b/spring-cloud-dataflow-apps-docs-plugin/pom.xml
@@ -78,7 +78,7 @@
 					</snapshots>
 					<id>spring-snapshots</id>
 					<name>Spring Snapshots</name>
-					<url>https://repo.spring.io/libs-snapshot-local</url>
+					<url>https://repo.spring.io/snapshot</url>
 				</repository>
 				<repository>
 					<snapshots>
@@ -86,7 +86,7 @@
 					</snapshots>
 					<id>spring-milestones</id>
 					<name>Spring Milestones</name>
-					<url>https://repo.spring.io/libs-milestone-local</url>
+					<url>https://repo.spring.io/milestone</url>
 				</repository>
 				<repository>
 					<snapshots>
