--- a/stream-applications-build/pom.xml
+++ b/stream-applications-build/pom.xml
@@ -265,13 +265,13 @@
 		<repository>
 			<id>repo.spring.io</id>
 			<name>Spring Release Repository</name>
-			<url>https://repo.spring.io/libs-release-local</url>
+			<url>https://repo.spring.io/release</url>
 		</repository>
 
 		<snapshotRepository>
 			<id>repo.spring.io</id>
 			<name>Spring Snapshot Repository</name>
-			<url>https://repo.spring.io/libs-snapshot-local</url>
+			<url>https://repo.spring.io/snapshot</url>
 		</snapshotRepository>
 
 	</distributionManagement>
@@ -322,7 +322,7 @@
 				<repository>
 					<id>repo.spring.io</id>
 					<name>Spring Milestone Repository</name>
-					<url>https://repo.spring.io/libs-milestone-local</url>
+					<url>https://repo.spring.io/milestone</url>
 				</repository>
 			</distributionManagement>
 		</profile>
