--- a/applications/processor/groovy-processor/pom.xml
+++ b/applications/processor/groovy-processor/pom.xml
@@ -6,12 +6,12 @@
     <artifactId>groovy-processor</artifactId>
     <name>groovy-processor</name>
     <description>groovy processor apps</description>
-    <version>3.0.0-SNAPSHOT</version>
+    <version>3.0.0-RC1</version>
 
     <parent>
         <groupId>org.springframework.cloud.stream.app</groupId>
         <artifactId>stream-applications-core</artifactId>
-        <version>3.0.0-SNAPSHOT</version>
+        <version>3.0.0-RC1</version>
         <relativePath/>
     </parent>
 
