--- a/functions/pom.xml
+++ b/functions/pom.xml
@@ -12,12 +12,12 @@
 	<parent>
 		<groupId>org.springframework.cloud.stream.app</groupId>
 		<artifactId>stream-applications-build</artifactId>
-		<version>1.0.0-RC1</version>
+		<version>1.0.0-SNAPSHOT</version>
 		<relativePath/>
 	</parent>
 
 	<properties>
-		<revision>1.0.0-RC1</revision>
+		<revision>1.0.0-SNAPSHOT</revision>
 	</properties>
 
 	<modules>
