--- a/applications/source/cdc-debezium-source/src/main/resources/META-INF/dataflow-configuration-metadata.properties
+++ b/applications/source/cdc-debezium-source/src/main/resources/META-INF/dataflow-configuration-metadata.properties
@@ -1,7 +1,7 @@
 configuration-properties.classes=org.springframework.cloud.fn.supplier.cdc.CdcSupplierProperties, \
   org.springframework.cloud.fn.supplier.cdc.CdcSupplierProperties$Header, \
   org.springframework.cloud.fn.common.cdc.CdcCommonProperties, \
-  org.springframework.cloud.fn.common.cdc.CdcCommonProperties$Flattering, \
+  org.springframework.cloud.fn.common.cdc.CdcCommonProperties$Flattening, \
   org.springframework.cloud.fn.common.cdc.CdcCommonProperties$Offset, \
   org.springframework.cloud.fn.common.metadata.store.MetadataStoreProperties, \
   org.springframework.cloud.fn.common.metadata.store.MetadataStoreProperties$Gemfire, \
