--- a/functions/supplier/cdc-debezium-supplier/src/main/resources/application.properties
+++ b/functions/supplier/cdc-debezium-supplier/src/main/resources/application.properties
@@ -1,2 +1,2 @@
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.mongo.MongoAutoConfiguration
-spring.cloud.stream.kafka.default.producer.messageKeyExpression=headers['cdc_key']
+spring.cloud.stream.kafka.default.producer.messageKeyExpression=headers['cdc_key'].bytes
